# karpathy-path

./: .gitignore  CLAUDE.md  README.md
.obsidian/: workspace.json
00-Meta/: AI_Roadmap_From_Developer_to_Karpathy_Level.md  book-topic-template.md  claude-code-bootstrap-prompt.md  curriculum-map.md  daily-log-template.md  progress.json  reference-library.md
01-Phases/: Phase-0-Math-Refresh.md  Phase-1-Neural-Nets-From-Scratch.md  Phase-2-GPT-From-Scratch.md  Phase-3-Pretraining.md  Phase-4-Finetuning-RLHF-DPO.md  Phase-5-Practitioner-Stack.md  Phase-6-Agents.md  Phase-7-Deployment-MLOps.md  Phase-8-Specialization.md
02-Topics/: Calculus-Gradients.md  Coding-the-Matrix-Basis.md  Coding-the-Matrix-Fundamentals.md  Coding-the-Matrix-Vector-Space.md  Coding-the-Matrix-Vectors.md  Linear-Algebra-Axler-Fundamentals.md  Linear-Algebra-Basics.md  Probability-Fundamentals.md  Self-Attention-QKV.md
03-Daily-Logs/: 2026-06-26.md  2026-06-27.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-07.md  2026-07-12.md  2026-07-17.md  2026-07-18.md  2026-07-21.md  2026-07-22.md
04-Quiz-Bank/: README.md  exercises-linear-algebra-ch4-11.md  phase-0-axler-klein-2026-07-01.md  (+3 more)
05-Projects/coding-the-matrix/: pyproject.toml
05-Projects/coding-the-matrix/src/coding_the_matrix/: basis.py  gf2.py  mat.py  matutil.py  msf.py  triangular.py  vec.py  vecutil.py  viz_examples.py  viz_html.py
05-Projects/coding-the-matrix/tests/: test_basis.py  test_mat.py  test_msf.py  test_triangular.py  test_vec.py  test_viz_html.py
notifier/: auth.py  (+3 more)
(+30 files in other folders)
