[project]
name = "coding-the-matrix"
version = "0.1.0"
description = "Klein's Coding the Matrix — Vec/Mat/GF2 exercises"
authors = [
    { name = "Santiago Huanacu Sanchez", email = "santihs.sanchez@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["src", "tests"]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
